--- a/yolov7/tools/reparameterization.ipynb
+++ b/yolov7/tools/reparameterization.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "# import\n",
     "from copy import deepcopy\n",
-    "from models.yolo import Model\n",
+    "from yolov7.models.yolo import Model\n",
     "import torch\n",
     "from utils.torch_utils import select_device, is_parallel\n",
     "import yaml\n",
