yolo working, seg working, need to be tested

--- a/yolov7/tools/reparameterization.ipynb
+++ b/yolov7/tools/reparameterization.ipynb
@@ -111,7 +111,7 @@
    "source": [
     "# import\n",
     "from copy import deepcopy\n",
-    "from models.yolo import Model\n",
+    "from yolov7.models.yolo import Model\n",
     "import torch\n",
     "from utils.torch_utils import select_device, is_parallel\n",
     "import yaml\n",
@@ -173,7 +173,7 @@
    "source": [
     "# import\n",
     "from copy import deepcopy\n",
-    "from models.yolo import Model\n",
+    "from yolov7.models.yolo import Model\n",
     "import torch\n",
     "from utils.torch_utils import select_device, is_parallel\n",
     "import yaml\n",
@@ -259,7 +259,7 @@
    "source": [
     "# import\n",
     "from copy import deepcopy\n",
-    "from models.yolo import Model\n",
+    "from yolov7.models.yolo import Model\n",
     "import torch\n",
     "from utils.torch_utils import select_device, is_parallel\n",
     "import yaml\n",
@@ -345,7 +345,7 @@
    "source": [
     "# import\n",
     "from copy import deepcopy\n",
-    "from models.yolo import Model\n",
+    "from yolov7.models.yolo import Model\n",
     "import torch\n",
     "from utils.torch_utils import select_device, is_parallel\n",
     "import yaml\n",
@@ -431,7 +431,7 @@
    "source": [
     "# import\n",
     "from copy import deepcopy\n",
-    "from models.yolo import Model\n",
+    "from yolov7.models.yolo import Model\n",
     "import torch\n",
     "from utils.torch_utils import select_device, is_parallel\n",
     "import yaml\n",
